--- a/pkg/ui/workspaces/cluster-ui/src/dateRange/dateRange.module.scss
+++ b/pkg/ui/workspaces/cluster-ui/src/dateRange/dateRange.module.scss
@@ -10,6 +10,12 @@
 }
 
 .popup-content {
+  .icon {
+    //vertical-align: middle;
+    font-size: 13px;
+    margin-right: 3px;
+  }
+
   .label {
     display: block;
   }
